k8s/db/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: scrolller
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
